# lpp-3ds-next

./: .clang-format  .gitignore  .gitmodules  CI.sh  CMakeLists.txt  Makefile  README.md  cformat.sh  client_test.cpp  lpp-3ds-next.3dsx  lpp-3ds-next.elf  setup.sh  socConnect.py
.github/workflows/: Citra.yml  Citra.yml.disabled  Error-H-Disabled.yml  Standart.yml  Standart.yml.disabled  main.yml
app/: build-cia.rsf
libs/: build_libs_linux.sh  build_libs_windows.sh
libs/include/: lapi.h  lauxlib.h  lcode.h  lctype.h  ldo.h  lfunc.h  lgc.h  ljumptab.h  llex.h  llimits.h  lmem.h  lobject.h  lopcodes.h  lparser.h  lstate.h  lstring.h  ltm.h  lua.h  luaconf.h  lvm.h  lzio.h
lpp-next-core/: CMakeLists.txt
lpp-next-core/include/: Archive.h  C2D_Helper.hpp  ErrorHelper.hpp  Filesystem.hpp  Font.hpp  d7lua.hpp  ftp.h  ftp_cmd.h  luaplayer.hpp  utils.h
lpp-next-core/include/stb/: stb_image.h  stb_truetype.h
lpp-next-core/source/: Filesystem.cpp  Graphics.cpp  Image.cpp
romfs/: index.lua  index.lua.ltest  index.lua.needfix  index.lua.notyet  index.lua33  keyboard.json
samples/GPU Rendering/: gpu.lua
samples/Hello World/: helloworld.lua
samples/Multimedia/: mp3.lua
source/: ErrorHelper.cpp  luaCamera.cpp  luaControls.cpp  luaCore.cpp  luaGraphics.cpp  luaKeyboard.cpp  luaNetwork.cpp  luaPlayer.cpp  luaRender.cpp  luaScreen.cpp  luaSound.cpp  luaSystem.cpp  lua_Camera.cpp  lua_Controls.cpp  lua_Core.cpp  lua_Graphics.cpp  lua_Keyboard.cpp  lua_Mic.cpp  lua_Network.cpp  lua_Render.cpp  lua_Screen.cpp  lua_Sound.cpp  lua_Sound.cpp.scuff  lua_System.cpp  lua_System.cpp.need_bif_rewrite  lua_Timer.cpp  lua_Video.cpp  lua_Video.cpp.scuff  main.cpp
source/include/: Archive.cpp  Archive.h  C2D_Helper.hpp  ErrorHelper.hpp  Graphics.cpp  Graphics.hpp  NDS.cpp  NDS.hpp  NpiDbgServer.cpp  NpiDbgServer.hpp  audio.cpp  audio.hpp  font.h  luaplayer.hpp  memory.cpp  memory.hpp  utils.cpp  utils.h  vshader.cpp  vshader.hpp
source/include/ftp/: ftp.cpp  ftp.h  ftp_cmd.cpp  ftp_cmd.h
source/include/graphics/: Graphics.cpp  Graphics.h
source/include/hbkb/: hbkb.cpp  hbkb.h  hw_controls.cpp  hw_controls.h  hw_graphics.cpp  hw_graphics.h
source/include/lodepng/: lodepng.cpp  lodepng.h
source/include/ttf/: Color.hpp  Common.hpp  Font.cpp  Font.hpp  Image.cpp  Image.hpp  stb_image.h  stb_image_write.h
tools/: build_shader.py
